--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -d",
-    "build-wasm": "em++ --bind -O2 -msimd128 -s WASM=1 -s BINARYEN_ASYNC_COMPILATION=0 -s SINGLE_FILE=1 ./HoastProcessor/HoastProcessor.cpp -o ./HoastProcessor/hoast-processor.wasmmodule.js --post-js ./lib/wasm-audio-helper.js --post-js ./HoastProcessor/hoast-worklet-processor.js",
-    "build-all": "npm run build-wasm && npm run build" 
+    "build-web": "webpack -p",
+    "build-web-dbg": "webpack -d",
+    "build-wasm-dbg": "em++ --bind -O1 -s WASM=1 -s BINARYEN_ASYNC_COMPILATION=0 -s SINGLE_FILE=1 ./HoastProcessor/HoastProcessor.cpp -o ./HoastProcessor/hoast-processor.wasmmodule.js --post-js ./lib/wasm-audio-helper.js --post-js ./HoastProcessor/hoast-worklet-processor.js",
+    "build-wasm": "em++ --bind -O3 -s WASM=1 -s BINARYEN_ASYNC_COMPILATION=0 -s SINGLE_FILE=1 ./HoastProcessor/HoastProcessor.cpp -o ./HoastProcessor/hoast-processor.wasmmodule.js --post-js ./lib/wasm-audio-helper.js --post-js ./HoastProcessor/hoast-worklet-processor.js",
+    "wasm-vec": "em++ --bind -O2 -msimd128 -Rpass=loop-vectorize -Rpass-missed=loop-vectorize -Rpass-analysis=loop-vectorize -s WASM=1 -s BINARYEN_ASYNC_COMPILATION=0 -s SINGLE_FILE=1 ./HoastProcessor/HoastProcessor.cpp -o ./HoastProcessor/hoast-processor.wasmmodule.js --post-js ./lib/wasm-audio-helper.js --post-js ./HoastProcessor/hoast-worklet-processor.js",
+    "build-all": "npm run build-wasm && npm run build-web",
+    "build-all-dbg": "npm run build-wasm-dbg && npm run build-web-dbg" 
   },
   "repository": {
     "type": "git",
