--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -d",
-    "production-build": "webpack -p"
+    "production-build": "webpack -p",
+    "server": "http-server"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
     "@babel/preset-env": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "http-server": "^0.12.1",
     "raw-loader": "^4.0.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
