--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -d",
-    "production-build": "webpack -p"
+    "build": "webpack -d --env.development",
+    "production-build": "webpack -p --env.production"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,12 @@
     "@babel/preset-env": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
     "raw-loader": "^4.0.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
