--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hoast-player",
   "version": "1.0.0",
   "description": "360 degree video player with dynamic binaural higher-order ambisonics rendering, depending on view direction and zoom factor.",
-  "main": "index.js",
+  "main": "hoast360.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -d --env.development",
