--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@videojs/http-streaming": "^1.13.3",
+    "@videojs/vhs-utils": "^1.3.0",
     "dashjs": "^3.1.0",
     "jquery": "^3.5.1",
     "numeric": "^1.2.6",
     "spherical-harmonic-transform": "^0.1.1",
     "video.js": "^7.7.6",
     "videojs-contrib-dash": "^2.11.0",
+    "videojs-contrib-quality-levels": "^2.0.9",
+    "videojs-http-source-selector": "^1.1.6",
     "videojs-xr": "0.0.3"
   }
 }
